app-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 3000
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 7000
